Configure swagger
