# ecommerce-nodejs-api/src/routes/customer.route.js
@@ -4,9 +4,10 @@ const customer = (app) => {
     app.get(`/api/customers`, CustomerController.get);
     app.post(`/api/customers`, CustomerController.create);
     app.get(`/api/customers/:id`, CustomerController.findOne);
-    app.delete(`/api/customers/1/delete`, CustomerController.remove);
-    app.put(`/api/customers/1/update`, CustomerController.update);
-    app.patch(`/api/customers/1/delete`, CustomerController.deactivate);
+    app.put(`/api/customers/:id/update`, CustomerController.update);
+    app.patch(`/api/customers/:id/enable`, CustomerController.enable);
+    app.patch(`/api/customers/:id/disable`, CustomerController.disable);
+    app.delete(`/api/customers/:id/delete`, CustomerController.remove);
 }
 
 module.exports = customer;
